- clean up on code and batch files - more consistent message format across batch files and shell scripts - fixed runtime errors in shell scripts - Nexial v3.0 release candidate
Signed-off-by: automike <mikeliucc@gmail.com>